overflow bug fixes

--- a/frameit/src/components/christmas/christmas.component.scss
+++ b/frameit/src/components/christmas/christmas.component.scss
@@ -74,6 +74,7 @@ html {
   max-width: 15%;
   margin-top: 3px;
   border-radius: 5px;
+  overflow: hidden;
 }
 
 .guess-label {
@@ -83,6 +84,7 @@ html {
   max-width: 15%;
   margin-top: 3px;
   border-radius: 5px;
+  overflow: hidden;
 }
 
 .searched-movies {
