--- a/frameit/src/components/game/game.component.css
+++ b/frameit/src/components/game/game.component.css
@@ -55,6 +55,7 @@
   max-width: 15%;
   margin-top: 3px;
   border-radius: 5px;
+  overflow: hidden;
 }
 
 .guess-label {
@@ -64,6 +65,7 @@
   max-width: 15%;
   margin-top: 3px;
   border-radius: 5px;
+  overflow: hidden;
 }
 
 .searched-movies {
